# wellplated

./: .editorconfig  .gitignore  .pre-commit-config.yaml  .tool-versions  LICENSE  README.md  conftest.py  includes.sh  justfile  manage.py  package-lock.json  package.json  pyproject.toml  requirements.in  requirements.txt
.github/: pull_request_template.md
.github/workflows/: check.yaml
default/: __init__.py  settings_module.py
demodj/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
documentation/: design.md  example.md  see_also.md  vocabulary.md
wellplated/: __init__.py  admin.py  apps.py  fields.py  models.py  models.sql  tests.py
wellplated/management/commands/: schema.py
wellplated/migrations/: 0001_initial.py
wellplated/static/: wellplated.css
